--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,13 +9,13 @@ environment:
 
     # Python 2.7.13 is the latest version and is not pre-installed.
 
-    - PYTHON: "C:\\Python27.13"
-      PYTHON_VERSION: "2.7.13"
-      PYTHON_ARCH: "32"
+    #- PYTHON: "C:\\Python27.13"
+    #  PYTHON_VERSION: "2.7.13"
+    #  PYTHON_ARCH: "32"
 
-    - PYTHON: "C:\\Python27.13-x64"
-      PYTHON_VERSION: "2.7.13"
-      PYTHON_ARCH: "64"
+    #- PYTHON: "C:\\Python27.13-x64"
+    #  PYTHON_VERSION: "2.7.13"
+    #  PYTHON_ARCH: "64"
 
     # Pre-installed Python versions, which Appveyor may upgrade to
     # a later point release.
