--- a/appveyor.yml
+++ b/appveyor.yml
@@ -94,7 +94,8 @@ after_test:
 
 artifacts:
   # Archive the generated packages in the ci.appveyor.com build report.
-  - path: build\*
+  - path: build
+  - name: build_folder
 
 #on_success:
 #  - TODO: upload the content of dist/*.whl to a public wheelhouse
