--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,7 @@
 version: '0.1.0 ({build})'
+branches:
+  only:
+  - master
 environment:
   global:
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
