--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,13 +28,13 @@ environment:
     - PYTHON: "C:\\Python27"
       PYTHON_VERSION: "2.7.x" # currently 2.7.13
       PYTHON_ARCH: "32"
-      PYWIN32_URL: "https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20220/pywin32-220.win32-py2.7.exe"
+      PYWIN32_URL: "https://xocraft.fr/dev/pywin32-220.win32-py2.7.exe"
       INSTALL_SCRIPT: "32.iss"
 
     - PYTHON: "C:\\Python27-x64"
       PYTHON_VERSION: "2.7.x" # currently 2.7.13
       PYTHON_ARCH: "64"
-      PYWIN32_URL: "https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20220/pywin32-220.win-amd64-py2.7.exe"
+      PYWIN32_URL: "https://xocraft.fr/dev/pywin32-220.win-amd64-py2.7.exe"
       INSTALL_SCRIPT: "64.iss"
 
 
